# librs

./: .gitignore  CMakeLists.txt  README.md  config.h.in
inc/: graphics.hpp  linkbot.hpp  macros.hpp  modularrobot.hpp  rgbhashtable.h  robosim.hpp  robot.hpp
inc/rs/: enum.hpp
inc/rsRobots/: linkbot.hpp  robot.hpp  robotgroup.hpp
inc/rsScene/: cubusCallback.hpp  groundCallback.hpp  keyboardHandler.hpp  mobotCallback.hpp  nxtCallback.hpp  rgbhashtable.h  scene.hpp  skyTransform.hpp  textureCallback.hpp
inc/rsSim/: cubus.hpp  linkbot.hpp  mobot.hpp  mobotgroup.tpp  nxtgroup.tpp  robot.hpp
inc/rsXML/: conn.hpp  store.hpp
include/rs/: Enum  Macros  Pos  Quat  Research  Threads  Timer  Types  Vec  enum.hpp  macros.hpp
include/rsCallback/: Callback  CubusCallback  Dof  GroundCallback  Linkbot  LinkbotCallback  Mindstorms  MindstormsCallback  MiniDof  MobotCallback  ModularRobot  Obstacle  ObstacleCallback  Robot  callback.hpp  cubusCallback.hpp  groundCallback.hpp  linkbotCallback.hpp  mindstormsCallback.hpp  mobotCallback.hpp  nxtCallback.hpp
include/rsResearch/: Enum  Integrator  Publisher  Replier  Requester  Subscriber
include/rsRobots/: Dof  Linkbot  Mindstorms  Mindstorms.hpp  MiniDof  ModularRobot  ModularRobot.hpp  Robot  linkbot.hpp  modularRobot.hpp  rgbhashtable.h  robot.hpp  robotgroup.hpp
include/rsScene/: Dof  FixedManipulator  KeyboardHandler  Linkbot  Mindstorms  MiniDof  ModularRobot  MouseHandler  OpenCVOperation  Robot  Scene  SkyTransform  TextureCallback  cubusCallback.hpp  groundCallback.hpp  keyboardHandler.hpp  linkbotCallback.hpp  mobotCallback.hpp  mouseHandler.hpp  nxtCallback.hpp  scene.hpp  skyTransform.hpp  textureCallback.hpp
include/rsSim/: Cubus  Dof  Linkbot  Mindstorms  Mindstorms.hpp  MiniDof  Mobot  ModularRobot  Robot  Sim  linkbot.hpp  linkbotgroup.tpp  modularRobot.hpp  nxt.hpp  robot.hpp  robotgroup.tpp  sim.hpp
include/rsXML/: BackgroundReader  Config  Conn  Dof  Ground  Linkbot  Marker  Mindstorms  MiniDof  Obstacle  Reader  Robot  Store  Writer  conn.hpp  ground.hpp  marker.hpp  robot.hpp  store.hpp
resources/: FindZMQ.cmake  dpiawarescaling.manifest  robosimrc.sample
resources/background/2014RoboPlay/: background.xml
resources/background/2015RoboPlay/: background.xml
resources/background/2016RoboPlay/: background.xml
resources/background/2017RoboPlay/: background.xml
resources/background/baroboactivitymat/: background.xml
resources/background/none/: background.xml
resources/background/outdoors/: background.xml  ground.3ds
resources/challenges/2014/division01/: bounce.xml  chicken.xml  disco.xml  high_five_low_five.xml  hit_the_wall.xml  racetrack.xml  speed_racer.xml  steal_the_gold.xml
resources/challenges/2014/division02/: alley_oop.xml  bounce.xml  c_u_soon.xml  get'n_dizzy_wit_it.xml  high_five_low_five.xml  racetrack.xml  steal_the_gold.xml  the_grid.xml  tortoise_and_the_hare.xml  transport.xml
resources/challenges/2014/division1/: bounce.xml  chicken.xml  disco.xml  high_five_low_five.xml  hit_the_wall.xml  speed_racer.xml  steal_the_gold.xml  transport.xml
resources/challenges/2014/division2/: alley_oop.xml  bounce.xml  c_u_soon.xml  get'n_dizzy_wit_it.xml  high_five_low_five.xml  racetrack.xml  the_grid.xml  tortoise_and_the_hare.xml
resources/challenges/2015/division01/: bug_time.xml  destination_unknown.xml  robot_delivery_service.xml  robotic_slide.xml  speed_racer.xml  stacking_challenge.xml  stop_on_a_dime.xml  straight_forward.xml  tag.xml
resources/challenges/2015/division02/: bug_time.xml  landing_zone.xml  meet_ya_there.xml  navigate_the_oval.xml  newtons_crade.xml  retrieve_supplies.xml  robo_pullups.xml  speed_racer.xml  stacking_challenge.xml  synchronized_roboting.xml
resources/challenges/2015/division03/: bug_clock.xml  flash_mob.xml  navigate_the_figure_eighter.xml  newtons_crade.xml  retrieving_supplies_from_the_drop_site.xml  robo_pullups.xml  stacking_challenge.xml  synchronized_roboting.xml  tired_of_wheels.xml
resources/challenges/2015/division1/: bug_time.xml  destination_unknown.xml  robot_delivery_service.xml  robotic_slide.xml  speed_racer.xml  stacking_challenge.xml  straight_forward.xml  tag.xml
resources/dof/: el.3ds  foot.3ds
resources/linkbot/: bigwheel.3ds  body.3ds  bridge.3ds  caster.3ds  doublebridge.3ds  el.3ds  face_fixed.3ds  face_rotate.3ds  gripper.3ds  omnidrive.3ds  omniplate.3ds  smallwheel.3ds  soccerscoop.3ds  tinywheel.3ds
resources/linkbot/models/: cube.3ds  faceplate.3ds  gripper.3ds  simple.3ds  simple.stl  smallwheel.3ds
resources/mindstorms/: body.3ds  body.tga  wheel.3ds
src/: CMakeLists.txt  cubus.cpp  graphics.cpp  linkbot.cpp  modularrobot.cpp  robosim.cpp  robot.cpp
src/rs/: CMakeLists.txt  pos.cpp  quat.cpp  timer.cpp  vec.cpp
src/rsCallback/: CMakeLists.txt  callback.cpp  cubusCallback.cpp  dof.cpp  groundCallback.cpp  linkbot.cpp  linkbotCallback.cpp  mindstorms.cpp  mindstormsCallback.cpp  minidof.cpp  mobotCallback.cpp  nxtCallback.cpp  obstacle.cpp  obstacleCallback.cpp
src/rsResearch/: CMakeLists.txt  integrator.cpp  publisher.cpp  replier.cpp  requester.cpp  subscriber.cpp
src/rsRobots/: CMakeLists.txt  dof.cpp  linkbot.cpp  mindstorms.cpp  minidof.cpp  rgbhashtable.c  robot.cpp
src/rsScene/: CMakeLists.txt  cubusCallback.cpp  dof.cpp  groundCallback.cpp  keyboardHandler.cpp  keyboardhandler.cpp  linkbot.cpp  linkbotCallback.cpp  mindstorms.cpp  minidof.cpp  mobotCallback.cpp  mouseHandler.cpp  mousehandler.cpp  nxtCallback.cpp  opencvoperation.cpp  rgbhashtable.c  robot.cpp  scene.cpp  skyTransform.cpp  skytransform.cpp  textureCallback.cpp  texturecallback.cpp
src/rsSim/: CMakeLists.txt  cubus.cpp  dof.cpp  linkbot.cpp  mindstorms.cpp  minidof.cpp  mobot.cpp  modularRobot.cpp  modularrobot.cpp  nxt.cpp  robot.cpp  sim.cpp
src/rsXML/: CMakeLists.txt  backgroundReader.cpp  backgroundreader.cpp  conn.cpp  dof.cpp  ground.cpp  linkbot.cpp  marker.cpp  mindstorms.cpp  minidof.cpp  obstacle.cpp  reader.cpp  robot.cpp  store.cpp  writer.cpp
tpl/: cubusgroup.tpp
(+74 files in other folders)
